--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,10 +14,21 @@
   h5,
   h6 {
     margin: 8px 0;
+    color:black
   }
 
   p {
     margin: 0;
+  }
+
+  small{
+    color:black;
+  }
+  select{
+    height: 2em;
+  }
+  input{
+    height: 2em;
   }
 
   .spacer {
@@ -25,7 +36,7 @@
   }
 
   .toolbar {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -42,56 +53,97 @@
     margin: 0 16px;
   }
 
-  .toolbar #twitter-logo {
-    height: 40px;
-    margin: 0 8px;
-  }
-
-  .toolbar #youtube-logo {
-    height: 40px;
-    margin: 0 16px;
-  }
-
-  .toolbar #twitter-logo:hover,
-  .toolbar #youtube-logo:hover {
-    opacity: 0.8;
-  }
-
   .content {
-    margin-top: 10em;
+    margin-top: 2em;
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+  }
+
+  .content-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f5fafd;
+    width: 100%;
+
   }
 
   .card-container {
     all: unset;
     border-radius: 4px;
     border: 1px solid #eee;
-    background-color: #fafafa;
-    margin: 0 8px 16px;
+    background-color: white;
     padding: 16px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    transition: all 0.2s ease-in-out;
     line-height: 24px;
+    transition: box-shadow .3s;
+  }
+
+  .card-container:hover {
+    box-shadow: 0 0 11px rgba(33,33,33,.2); 
   }
 
   .card {
     all: unset;
     border-radius: 4px;
     border: 1px solid #eee;
-    background-color: #fafafa;
+    background-color: #03a9f4;
     margin: 0 8px 16px;
     padding: 16px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    transition: all 0.2s ease-in-out;
+    transition: box-shadow .3s;
     line-height: 24px;
+  }
+
+  .card-column {
+    all: unset;
+    border-radius: 4px;
+    border: 1px solid #eee;
+    background-color: #03a9f4;
+    margin: 0 8px 16px;
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: box-shadow .3s;
+    line-height: 24px;
+  }
+
+  .card-column:hover {
+    box-shadow: 0 0 11px rgba(33,33,33,.2); 
+  }
+
+  .border-blue{
+    border: none;
+    border-bottom: #03a9f4 solid 4px;
+  }
+
+  .button {
+    all: unset;
+    border-radius: 4px;
+    border: 1px solid #eee;
+    background-color: #03a9f4;
+    margin: 0 8px 16px;
+    padding: 16px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    line-height: 24px;
+    width:25em;
+  }
+
+  .card:hover {
+    box-shadow: 0 0 11px rgba(33,33,33,.2); 
   }
 
   .card-container .card:not(:last-child) {
@@ -103,19 +155,6 @@
     width: 168px;
   }
 
-  .card-container .card:not(.highlight-card) {
-    cursor: pointer;
-  }
-
-  .card-container .card:not(.highlight-card):hover {
-    transform: translateY(-3px);
-    box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
-  }
-
-  .card-container .card:not(.highlight-card):hover .material-icons path {
-    fill: rgb(105, 103, 103);
-  }
-
   .card.highlight-card {
     background-color: #2a2d56;
     color: white;
@@ -124,13 +163,11 @@
     width: auto;
     min-width: 30%;
     position: relative;
+    transition: box-shadow .3s;
   }
 
-  svg#rocket {
-    width: 80px;
-    position: absolute;
-    left: -10px;
-    top: -24px;
+  .card.highlight-card:hover {
+    box-shadow: 0 0 11px rgba(33,33,33,.2); 
   }
 
   svg#rocket-smoke {
@@ -193,6 +230,10 @@
     .card:not(.highlight-card) {
       height: 16px;
       margin: 8px 0;
+    }
+
+    span{
+      color:black;
     }
 
     .card.highlight-card span {
