--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -41,9 +41,10 @@
     left: 0;
     right: 0;
     width: 100%;
-    height: 5em;
+    height: 8em;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     background-color: #2a2d56;
     color: white;
     font-weight: 600;
@@ -55,10 +56,14 @@
 
   .content {
     margin-top: 2em;
+    all: unset;
+    border-radius: 4px;
+    padding: 16px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    width: 100%;
+    line-height: 24px;
   }
 
   .content-main {
@@ -124,14 +129,28 @@
 
   .border-blue{
     border: none;
-    border-bottom: #03a9f4 solid 4px;
+    border-bottom: #03a9f4 solid 2px;
+  }
+
+  .circle {
+    background: #03a9f4;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 1em;
+    transition: box-shadow .3s;
+  }
+
+  .circle:hover {
+    box-shadow: 0 0 11px black; 
   }
 
   .button {
     all: unset;
     border-radius: 4px;
     border: 1px solid #eee;
-    background-color: #03a9f4;
+    background-color: #0276ab;
     margin: 0 8px 16px;
     padding: 16px;
     display: flex;
@@ -142,8 +161,12 @@
     width:25em;
   }
 
+  .button:hover{
+    background-color: #03a9f4;
+  }
+
   .card:hover {
-    box-shadow: 0 0 11px rgba(33,33,33,.2); 
+    box-shadow: 0 0 11px black; 
   }
 
   .card-container .card:not(:last-child) {
