--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,8 @@
-:host {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 14px;
-    color: #333;
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+
+
+  @font-face {
+    font-family: oxygenSans;
+    src: url('../assets/Oxygen/Oxygen-Light.ttf');
   }
 
   h1,
@@ -14,21 +12,36 @@
   h5,
   h6 {
     margin: 8px 0;
-    color:black
+    color:black;
+    font-family: oxygenSans;
+  }
+
+  .topnav{
+    font-family: oxygenSans;
+    font-size: 0.9em;
   }
 
   p {
     margin: 0;
+    font-family: oxygenSans;
+  }
+
+
+  span {
+    font-family: oxygenSans;
   }
 
   small{
     color:black;
+    font-family: oxygenSans;
   }
   select{
     height: 2em;
+    font-family: oxygenSans;
   }
   input{
     height: 2em;
+    font-family: oxygenSans;
   }
 
   .spacer {
@@ -48,6 +61,8 @@
     background-color: #2a2d56;
     color: white;
     font-weight: 600;
+    box-shadow: 0 0 10px black; 
+
   }
 
   .toolbar img {
@@ -78,7 +93,6 @@
   .card-container {
     all: unset;
     border-radius: 4px;
-    border: 1px solid #eee;
     background-color: white;
     padding: 16px;
     display: flex;
@@ -96,7 +110,6 @@
   .card {
     all: unset;
     border-radius: 4px;
-    border: 1px solid #eee;
     background-color: #03a9f4;
     margin: 0 8px 16px;
     padding: 16px;
@@ -111,7 +124,6 @@
   .card-column {
     all: unset;
     border-radius: 4px;
-    border: 1px solid #eee;
     background-color: #03a9f4;
     margin: 0 8px 16px;
     padding: 0px;
@@ -127,9 +139,14 @@
     box-shadow: 0 0 11px rgba(33,33,33,.2); 
   }
 
+  div {
+    font-family: Algerian
+  }
+
   .border-blue{
     border: none;
-    border-bottom: #03a9f4 solid 2px;
+    padding-bottom: 0.3em;
+    border-bottom: #03a9f4 solid 3px;
   }
 
   .circle {
@@ -211,36 +228,16 @@
   a:hover {
     color: #125699;
   }
-  .circle-link {
-    height: 40px;
-    width: 40px;
-    border-radius: 40px;
-    margin: 8px;
-    background-color: white;
-    border: 1px solid #eeeeee;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: 1s ease-out;
-  }
-
-  .circle-link:hover {
-    transform: translateY(-0.25rem);
-    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-  }
 
   footer {
     margin-top: 8px;
     display: flex;
     align-items: center;
-    line-height: 20px;
-  }
-
-  footer a {
-    display: flex;
-    align-items: center;
+    justify-content: center;
+    line-height: 6em;
+    background-color: white;
+    width: 100%;
+    border-top: 1px solid #e8e8e8;
   }
 
   /* Responsive Styles */
@@ -261,11 +258,6 @@
 
     .card.highlight-card span {
       margin-left: 72px;
-    }
-
-    svg#rocket-smoke {
-      right: 120px;
-      transform: rotate(-5deg);
     }
   }
 
