--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,65 @@
 <div class="toolbar" role="banner">
-  <img
+
+  <img *ngIf="!getIsMobile()"
   style="margin: 3em;"
     width="280"
     alt="Angular Logo"
     src="assets/logo.png"
   />
 
-  <div class="topnav">
+  <img *ngIf="getIsMobile()"
+  style="margin: 3em;"
+    width="200"
+    alt="Angular Logo"
+    src="assets/logo.png"
+  />
+
+  <img
+  width="25"
+  src="assets/menu.svg"
+  *ngIf="getIsMobile() && !isOpen" (click)="openNav()"
+/>
+
+  <div class="topnav" *ngIf="!getIsMobile()">
     <a  href="https://avanteconsultoriatrib.com.br/" style="color: white; margin-right: 2em;">INICIO</a>
     <a href="https://avanteconsultoriatrib.com.br/services/" style="color: white; margin-right: 2em;">SERVIÇOS</a>
     <a href="https://avanteconsultoriatrib.com.br/seja-um-parceiro/" style="color: white; margin-right: 2em;">SEJA UM PARCEIRO</a>
     <a href="https://avanteconsultoriatrib.com.br/faq/" style="color: white; margin-right: 2em;">FAQ</a>
-    <a href="https://avanteconsultoriatrib.com.br/consultoria-tributaria-e-seus-beneficios/" style="color: white; margin-right: 2em;">CONSULTORIA TRIBUTÁRIA</a>
+    <a href="https://avanteconsultoriatrib.com.br/consultoria-tributaria-e-seus-beneficios/" style="color: white;  margin-right: 2em;">CONSULTORIA TRIBUTÁRIA</a>
     <a class="border-blue" href="#" style="color: white; margin-right: 4em;">CALCULADORA</a>
   </div>
+
+
 </div>
 
-<div class="content-main" role="main" style="margin-top: 4em;">
+<div class="content-main" style="margin-top: 4em;">
+
+  <div class="toolbar-vertical" *ngIf="isOpen">  
+
+    <img
+      width="25"
+      alt="Angular Logo"
+      src="assets/x.svg"
+      style="position: fixed; top:0; right:0"
+      (click)="closeNav()"
+
+    />
+    <img
+        width="250"
+        alt="Angular Logo"
+        src="assets/logo.png"
+    />
+    <div style="height: 50%; width: 85%; display: flex; flex-direction: column; align-items: center; 
+    justify-content: space-around; margin-top: 10%;">
+      <div class="subitem"><a href="https://avanteconsultoriatrib.com.br/" style="color: white;">INICIO</a></div>
+      <div class="subitem"><a href="https://avanteconsultoriatrib.com.br/services/" style="color: white;">SERVIÇOS</a></div>
+      <div class="subitem"><a href="https://avanteconsultoriatrib.com.br/seja-um-parceiro/" style="color: white;">SEJA UM PARCEIRO</a></div>
+      <div class="subitem"><a href="https://avanteconsultoriatrib.com.br/faq/" style="color: white;">FAQ</a></div>
+      <div class="subitem"><a href="https://avanteconsultoriatrib.com.br/consultoria-tributaria-e-seus-beneficios/" style="color: white;">CONSULTORIA TRIBUTÁRIA</a></div>
+      <div class="subitem"><a href="#" style="color: white;">CALCULADORA</a></div>
+    </div>
+      
+  </div>
 
   <div *ngIf="valorRecuperado==0" class="content">
     <h1 style="margin-top: 4em;">Calculadora de Recuperação de Créditos</h1>
@@ -27,7 +70,7 @@
 
   <div class="card-container" style="margin-top: 10em;" *ngIf="valorRecuperado>0" id="result">
     <h1>Aqui está o resultado!</h1>
-    <h3>A partir das informações fornecidas calculamos uma estimativa de recuperação de créditos em face da Receita Federal</h3>
+    <h3 style="margin-bottom: 2em;">A partir das informações fornecidas calculamos uma estimativa de recuperação de créditos em face da Receita Federal</h3>
     
     <div style="width: 70%;">
       <div class="card-column">
@@ -40,27 +83,29 @@
         <h3 style="color: white;">Renda bruta anual: R$ {{getValorFormatado(rendaBruta)}}</h3>
       </div>
       
-      <div class="card highlight-card card-small">
-          <h2 style="color: white;  margin: 1em;">Valor aproximado a ser recuperado: R$ {{getValorFormatado(valorRecuperado)}}</h2>
+      <div class="card highlight-card" style="padding: 0em; width: 100%;">
+          <h2 style="color: white;  margin: 1em; font-size: 3.5vmin;">Valor aproximado a ser recuperado: R$ {{getValorFormatado(valorRecuperado)}}</h2>
       </div>
   </div>
 
-     <span style="margin-bottom: 1em;"><b>
+     <span style="margin-bottom: 1em; margin-top: 1em;"><b>
           Possui interesse em recuperar esse dinheiro de volta? <a (click)="scrollDown()" style="cursor:pointer;"
           class="border-blue">Vem com a Avante!</a>
         </b>
       </span>
 
-      <span><b>
-        E o melhor: nossa comissão é uma pequena porcentagem sobre o valor recuperado e somente será cobrada no êxito do negócio,<br> quando valor for creditado em sua conta corrente.
-      </b>
-    </span>
+      <div class="row">
+        <span><b>
+          E o melhor: nossa comissão é uma pequena porcentagem sobre o valor recuperado e somente será cobrada no êxito do negócio,<br> quando valor for creditado em sua conta corrente.
+          </b>
+        </span>
+      </div>
 
       <small>*Lembrando, esse valor calculado é um número aproximado e calculado com base nos últimos 5 anos. Ele pode sofrer alterações após uma análise mais aprofundada.</small>
 
-      <div style="width: 100%;">
-        <button style="background-color: white; cursor: pointer;
-         margin-left: 87%; margin-top: 2em;" class="border-blue" (click)="remakeCalc()" tabindex="0">
+      <div class="row">
+        <button style="background-color: white; cursor: pointer;"
+         class="border-blue" (click)="remakeCalc()" tabindex="0">
           <img
           style="margin-right: 0.5em;"
           width="15"
@@ -73,9 +118,9 @@
   </div>
 
   <!-- -->
-  <div class="card-container" *ngIf="valorRecuperado>0" style="margin: 2em;" id="result">
+  <div class="card-container" *ngIf="valorRecuperado>0" style="margin: 2em; max-width: 80%;" id="result">
     <h2>Entre em contato com nossa equipe para iniciarmos a recuperação desses impostos!</h2>
-    <div style="display: flex; flex-direction: row; justify-content: center;align-items: center;">
+    <div style="display: flex; flex-direction: row; justify-content: center;align-items: center; flex-wrap: wrap;">
       
       <a href="https://wa.me/5521983116181">
         <div class="circle">
@@ -162,8 +207,8 @@
             (change)="setRendaBruta($event)">
           </div>
         </form>
-        <div style=" flex-direction: row; justify-content: center;align-items: center;">
-          <button class="button card-small" style="cursor: pointer;" (click)="setValorRecuperado()" tabindex="0">
+        <div class="content">
+          <button class="button" style="cursor: pointer;" (click)="setValorRecuperado()" >
             <img
             style="margin-right: 0.5em;"
             width="15"
