--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -27,7 +27,7 @@
   }
 
   h3{
-    font-size: 3vmin;
+    font-size: 2.85vmin;
   }
 
   h4{
@@ -45,10 +45,11 @@
   }
 
   .subitem{
-    padding-left:20%;
-    padding-bottom: 2%;
+    padding-left:15%;
+    padding-bottom: 4%;
+    padding-top: 4%;
     width: 100%;
-    border-bottom: #8e9dae solid 1px;
+    border-bottom: #2d353f solid 0.1em;
   }
 
 
@@ -59,7 +60,7 @@
 
   a {
     font-family: oxygenSans;
-    font-size: 2.5vmin;
+    font-size: 2vmin;
   }
 
   small{
@@ -262,9 +263,8 @@
     color: white;
     font-weight: 600;
     border: none;
-    width: auto;
+    max-width: 100%;
     min-width: 30%;
-    position: relative;
     transition: box-shadow .3s;
   }
 
@@ -293,7 +293,7 @@
   }
 
   footer {
-    margin-top: 8px;
+    margin-top: 5em;
     display: flex;
     align-items: center;
     justify-content: center;
